[project]
name = "cpln-py"
dynamic = ["version"]
description = "A Python library for the Control Plane API"
authors = [
    {name = "dave6892", email = "dave6892@gmail.com"},
]
readme = "README.md"
license = { text = "Apache License 2.0" }
classifiers = [
	"Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = "<3.13,>=3.9"

dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "websocket-client>=1.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "requests-mock>=1.12.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.29.1",
]
lint = [
    "flake8>=7.2.0",
    "black>=25.1.0",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
write_to = "cpln/_version.py"
write_template = "__version__ = '{}'"
version_format = "src.version:format_version"
